2010-02-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/CompiledAssemblyProject.cs: Read
	  project files from debug info.

2010-02-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.addin.xml:
	* MonoDevelop.Projects/DotNetProject.cs:
	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/IAssemblyProject.cs:
	* MonoDevelop.Projects/ItemConfiguration.cs:
	* MonoDevelop.Projects/ProjectConfiguration.cs:
	* MonoDevelop.Projects/CompiledAssemblyProject.cs:
	* MonoDevelop.Projects.Formats.MSBuild/CompiledAssemblyProjectMSBuildHandler.cs:
	  Added support for standalone assembly projects.

	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Added new api which allows projects to store data in the
	  solution file.

	* MonoDevelop.Projects.Extensions/ItemTypeNode.cs:
	* MonoDevelop.Projects.Extensions/SolutionItemNode.cs:
	* MonoDevelop.Projects.Extensions/DotNetProjectNode.cs: Allow
	  specifying a custom solution item handler.

2010-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/TextFile.cs: Added the ability to
	  determine if a BOM was used or not.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	  Fixed 'Bug 582017 - C# Generic Type Constraints'.

2010-02-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed bug in set
	  array dimension.

2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Project.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomField.cs:
	* MonoDevelop.Projects.Dom/DomEvent.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs: